--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -15,10 +15,23 @@
             <span class='fa fa-users'></span> Configure
           </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-item nav-link" [routerLink]="['/test-faces']" [routerLinkActive]="['link-active']">
-            <span class='fa fa-eye'></span> Test Faces
-          </a>
+        <li class="nav-item dropdown">
+          <div ngbDropdown class="d-inline-block">
+            <a class="nav-item nav-link" ngbDropdownToggle>
+              <span class='fa fa-eye'></span> Face Analysis
+            </a>
+            <div ngbDropdownMenu>
+              <a class="dropdown-item" [routerLink]="['/test-faces']" [routerLinkActive]="['link-active']">
+                Detection/Identification
+              </a>
+              <a class="dropdown-item" [routerLink]="['/face-grouping']" [routerLinkActive]="['link-active']">
+                Face Grouping
+              </a>
+              <a class="dropdown-item" [routerLink]="['/find-similar']" [routerLinkActive]="['link-active']">
+                Find Similar
+              </a>
+            </div>
+          </div>
         </li>
       </ul>
     </div>
